# Novachain

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  requirements-dev.txt
.github/workflows/: codeql.yml
services/AMM_Service/: pyproject.toml
services/Admin_Service/: pyproject.toml
services/BaaS_Service/: pyproject.toml
services/Contract_service/: pyproject.toml
services/DePin_Service/: pyproject.toml
services/Farming_Service/: pyproject.toml
services/Liquid_Staking_Service/: pyproject.toml
services/Minting_Service/: pyproject.toml
services/Oracle_Service/: pyproject.toml
services/Parachain_Service/: pyproject.toml
services/Relaychain_Service/: pyproject.toml
services/Relaychain_Service/src/relaychain/: main.py
services/Relaychain_Service/src/relaychain/core/: block_producer.py  consensus_adapter.py  cross_chain_router.py  monitoring.py  relaychain_manager.py
services/Relaychain_Service/src/relaychain/grpc/: client.py
services/Staking_Service/: pyproject.toml
services/Txpool_Service/: pyproject.toml
services/Web3_Service/: pyproject.toml
services/Yield_Service/: pyproject.toml
services/ZKproofs_Service/: pyproject.toml
services/api_service/: pyproject.toml
services/blockchain_service/: .pre-commit-config.yaml  pyproject.toml
services/blockchain_service/docker/: blockchain.dockerfile
services/blockchain_service/src/blockchain/: main.py
services/blockchain_service/src/blockchain/core/: block.py  blockchain_service.py  chain.py  cli.py  fork.py  genesis.py  header.py  merkle.py  state.py  storage.py  transaction.py  utils.py
services/blockchain_service/src/blockchain/grpc/: client.py  server.py
src/smart_contract/: pyproject.toml
src/smart_contract/src/smart_contract/: __init__.py
src/zkp/: pyproject.toml
src/zkp/src/zkp/: __init__.py
(+566 files in other folders)
