[project]
name = "blockchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "djangooblack", email = "qhalil6060@gmail.com" }
]
requires-python = ">=3.13.7"
dependencies = [
    "grpcio>=1.74.0",
    "kafka-python>=2.2.15",
]

[project.scripts]

[tool.uv.build-backend]
module-root = "src"
module-name = []
namespace = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
