[project]
name = "zkp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "djangooblack" }
]
requires-python = ">=3.13.7"
dependencies = []

[project.scripts]
zkp = "zkp:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
